Hyphenate icon name to prevent overlap

--- a/storybook/src/docs/components/icon-gallery.css
+++ b/storybook/src/docs/components/icon-gallery.css
@@ -24,7 +24,9 @@
 .ams-storybook-icon-gallery__name {
   font-family: var(--ams-paragraph-font-family);
   font-size: 1.125rem;
+  hyphens: auto;
   line-height: 1.25;
   margin-block: 0;
+  overflow-wrap: break-word;
   text-align: center;
 }
